[package]
name = "telegra-ph"
version = "0.1.1"
edition = "2021"
license="MIT"
keywords = ["telegraph", "API"]
readme = "README.md"
categories = ["development-tools", "API"]
homepage = "https://crates.io/crates/telegraph"
repository = "https://github.com/HomelyGuy/telegraph"
documentation = "https://docs.rs/telegraph"
description = "implementation of API of telegra.ph"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
serde = { version="1.0.136", features=[ "derive" ] }

[dev-dependencies]
serde_json = "1.0.79"

